--- a/deliverables/rocky/puppet-aodh.yaml
+++ b/deliverables/rocky/puppet-aodh.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 82449ea7c629b22598b16054e4d759f35c8505fe
         repo: openstack/puppet-aodh
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-aodh
+        hash: 3f93e4867cf1d90a85ce2d9e406cf859975c0bb5
