--- a/deliverables/rocky/puppet-barbican.yaml
+++ b/deliverables/rocky/puppet-barbican.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 39c368b8659d441c5cc1683449ed812b3577f597
         repo: openstack/puppet-barbican
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-barbican
+        hash: b0a27401c9560e8e468cc7040b81dfbc8048a571
