--- a/deliverables/rocky/puppet-ceilometer.yaml
+++ b/deliverables/rocky/puppet-ceilometer.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 4bf8d7668e5ae90bbbe9b6693827e8a6624b491c
         repo: openstack/puppet-ceilometer
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-ceilometer
+        hash: e2a4f8ef6fc73b10c1a8916b7906ac87cb2ff6a3
