--- a/deliverables/rocky/puppet-cinder.yaml
+++ b/deliverables/rocky/puppet-cinder.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: a18a660dc46cbff06974debf9a168abbd2cf7d0a
         repo: openstack/puppet-cinder
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-cinder
+        hash: 11ccfb41dacc3b2a314a240272227f6812b92261
