--- a/deliverables/rocky/puppet-cloudkitty.yaml
+++ b/deliverables/rocky/puppet-cloudkitty.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 71c55bd26c3cdd87ec2cb89ba6eca06004df6f60
         repo: openstack/puppet-cloudkitty
     version: 2.0.0
+  - version: 2.1.0
+    projects:
+      - repo: openstack/puppet-cloudkitty
+        hash: d289566390146c373da857cb64d74db46da86b33
