--- a/deliverables/rocky/puppet-congress.yaml
+++ b/deliverables/rocky/puppet-congress.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 06abca1acb76b9b44fa21a672c3f7e93855bb30e
         repo: openstack/puppet-congress
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-congress
+        hash: bdc7d70758a20b29022b97493d5514257866d709
