--- a/deliverables/rocky/puppet-designate.yaml
+++ b/deliverables/rocky/puppet-designate.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: cf83957389a5195f2c922d159c1c53e0457a5855
         repo: openstack/puppet-designate
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-designate
+        hash: 4fac11edff8facf79a1fed5fbac27b5c06f79ecc
