--- a/deliverables/rocky/puppet-ec2api.yaml
+++ b/deliverables/rocky/puppet-ec2api.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 4e11ddb786dfdbdee6e04bf388e556f64ea55687
         repo: openstack/puppet-ec2api
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-ec2api
+        hash: 96135da577d0fa7cbe6004863369e96249845a8e
