--- a/deliverables/rocky/puppet-freezer.yaml
+++ b/deliverables/rocky/puppet-freezer.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: e012cff1053b31c44b5857bfda0d65719011ef24
         repo: openstack/puppet-freezer
     version: 2.0.0
+  - version: 2.1.0
+    projects:
+      - repo: openstack/puppet-freezer
+        hash: 9bff9f921cd343390598464929dab943da871d9c
