--- a/deliverables/rocky/puppet-glance.yaml
+++ b/deliverables/rocky/puppet-glance.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 010fc167648740237410c0175b6612646fc13f0a
         repo: openstack/puppet-glance
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-glance
+        hash: 3a466a58ee42fdab71e22e10fc0256a2103a4d09
