--- a/deliverables/rocky/puppet-glare.yaml
+++ b/deliverables/rocky/puppet-glare.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: a0ec78ab029aed1c96f333be0450cb0b0efd6bd6
         repo: openstack/puppet-glare
     version: 2.0.0
+  - version: 2.1.0
+    projects:
+      - repo: openstack/puppet-glare
+        hash: 30f97209ea54288801d8af10cd1d883988cb9f2e
