--- a/deliverables/rocky/puppet-gnocchi.yaml
+++ b/deliverables/rocky/puppet-gnocchi.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: b2eeddf6e8fad1ae890eae888c59da3ebccc0aca
         repo: openstack/puppet-gnocchi
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-gnocchi
+        hash: 8c7b63dfa74c4aef4f04713308a21f6f7a185f88
