--- a/deliverables/rocky/puppet-horizon.yaml
+++ b/deliverables/rocky/puppet-horizon.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: b0f6bde9a6bd675d08aaaff21338425c3686a15b
         repo: openstack/puppet-horizon
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-horizon
+        hash: 3e5a4a66cfa31d582eed3bb07d9e32f3d1b842ba
