--- a/deliverables/rocky/puppet-ironic.yaml
+++ b/deliverables/rocky/puppet-ironic.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 03701d553273232c83878a3ed07d04883d606fc4
         repo: openstack/puppet-ironic
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-ironic
+        hash: 156961baffb481aa8a716ed2216ed85a673055e7
