--- a/deliverables/rocky/puppet-keystone.yaml
+++ b/deliverables/rocky/puppet-keystone.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 44ec91c8b09d784232b78b8ba7858f02f6314e29
         repo: openstack/puppet-keystone
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-keystone
+        hash: 6d54f6a047689ea242ecde60d6d35624e9eb8eb8
