--- a/deliverables/rocky/puppet-magnum.yaml
+++ b/deliverables/rocky/puppet-magnum.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: fd9ae37f01850dd2cde1ccd5e95aed49974b30a0
         repo: openstack/puppet-magnum
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-magnum
+        hash: b7922898d98dfa1c791b870455791854ca21925e
