--- a/deliverables/rocky/puppet-manila.yaml
+++ b/deliverables/rocky/puppet-manila.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: ca1671c9e4e426b45a48adcc8701dc0dac675a5b
         repo: openstack/puppet-manila
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-manila
+        hash: 7f14b28e14189d3595cf702da4a1e57398a45e1d
