--- a/deliverables/rocky/puppet-monasca.yaml
+++ b/deliverables/rocky/puppet-monasca.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 4ea11d72597ac06b85ad4a74b7e14977ebda83b4
         repo: openstack/puppet-monasca
     version: 2.0.0
+  - version: 2.1.0
+    projects:
+      - repo: openstack/puppet-monasca
+        hash: 3857757a386823856b9508c4b626fc8a07c98c21
