--- a/deliverables/rocky/puppet-murano.yaml
+++ b/deliverables/rocky/puppet-murano.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 2d7ce0dbe45d3630d5362c1ddb919852ab072bea
         repo: openstack/puppet-murano
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-murano
+        hash: 82580fb844c93cf478d871ef52aafbf3e779f134
