--- a/deliverables/rocky/puppet-neutron.yaml
+++ b/deliverables/rocky/puppet-neutron.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 8a7b438748c3d931286cc94a9330bff5a7108577
         repo: openstack/puppet-neutron
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-neutron
+        hash: 59e883cac86f7c9ecf093636133c7d873b62a195
