--- a/deliverables/rocky/puppet-nova.yaml
+++ b/deliverables/rocky/puppet-nova.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 4e3ee87eced79e1d1ccb103264c477286d49881a
         repo: openstack/puppet-nova
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-nova
+        hash: 7b0c2cf947be752b7e2a7f70fdee679fc663c64f
