--- a/deliverables/rocky/puppet-openstack_extras.yaml
+++ b/deliverables/rocky/puppet-openstack_extras.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 34f63a7d73c1d7d7e7df4c79a4ad6c4a4d1b142e
         repo: openstack/puppet-openstack_extras
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-openstack_extras
+        hash: 6d1c96ee3c88afb686ca867ff85c9c0fbe6a0c31
