--- a/deliverables/rocky/puppet-openstacklib.yaml
+++ b/deliverables/rocky/puppet-openstacklib.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: e593eb025c42c4045f7bd37ca86041a7ca174e8e
         repo: openstack/puppet-openstacklib
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-openstacklib
+        hash: 9c5e2a1c0160e5a27bd91143fd4cb17677d6042b
