--- a/deliverables/rocky/puppet-oslo.yaml
+++ b/deliverables/rocky/puppet-oslo.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: fca8fd95f7fcf2b9cdd5363521892c2624ba94d9
         repo: openstack/puppet-oslo
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-oslo
+        hash: 8963d61cb3b912de14aac18ae8e22b685dbaafe1
