--- a/deliverables/rocky/puppet-ovn.yaml
+++ b/deliverables/rocky/puppet-ovn.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 7c0f9ff291f0fbb30a18be8894a5f4d7167e006c
         repo: openstack/puppet-ovn
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-ovn
+        hash: 25020cc69993580f8b499d1a4dfd7087e46e8429
