--- a/deliverables/rocky/puppet-panko.yaml
+++ b/deliverables/rocky/puppet-panko.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: e8c54f73523647cb7b708401127e1c4f0b948bbf
         repo: openstack/puppet-panko
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-panko
+        hash: 5b3caa884122be7bb4b247618d2ab846d381961c
