--- a/deliverables/rocky/puppet-qdr.yaml
+++ b/deliverables/rocky/puppet-qdr.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 348f52bec2ddb01d237c1dd858e9d419fe1ea96f
         repo: openstack/puppet-qdr
     version: 2.0.0
+  - version: 2.1.0
+    projects:
+      - repo: openstack/puppet-qdr
+        hash: 6f3ecac6fa9133854405c9289b41ad7fd82bb8b1
