--- a/deliverables/rocky/puppet-rally.yaml
+++ b/deliverables/rocky/puppet-rally.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: b720c0f6230bd2c7475016eee850aa43ecc766b5
         repo: openstack/puppet-rally
     version: 1.0.0
+  - version: 1.1.0
+    projects:
+      - repo: openstack/puppet-rally
+        hash: a25638ad1c044b8e972e9b6ed00e4d74b2611343
