--- a/deliverables/rocky/puppet-swift.yaml
+++ b/deliverables/rocky/puppet-swift.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: ecb052b9e11b23f5f7b0ddbbdb0d9aaf5f5d5be8
         repo: openstack/puppet-swift
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-swift
+        hash: c77abdc9788b653754b90970e5e98129aac0f252
