--- a/deliverables/rocky/puppet-tempest.yaml
+++ b/deliverables/rocky/puppet-tempest.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 471287ec5e0b7b6a5e18139e102dd9ad759a803c
         repo: openstack/puppet-tempest
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-tempest
+        hash: 45e3f6a5f209833798b874d1a0d2df2672e238e1
