--- a/deliverables/rocky/puppet-trove.yaml
+++ b/deliverables/rocky/puppet-trove.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 13652ee7c67cb89002195664e3a1814592dfb8cd
         repo: openstack/puppet-trove
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-trove
+        hash: 6122c9f20b3c12f42fdb9523e68f7284e3b0f899
