--- a/deliverables/rocky/puppet-vitrage.yaml
+++ b/deliverables/rocky/puppet-vitrage.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 17c300b5b2d9caf8f752b5013db6b01d08feb35f
         repo: openstack/puppet-vitrage
     version: 3.0.0
+  - version: 3.1.0
+    projects:
+      - repo: openstack/puppet-vitrage
+        hash: 13920eb4cab0b81fca698b8e3d3cbc92538ef32c
