--- a/deliverables/rocky/puppet-vswitch.yaml
+++ b/deliverables/rocky/puppet-vswitch.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: df78b576159930a087325a704e2ca1b53266a89f
         repo: openstack/puppet-vswitch
     version: 9.0.0
+  - version: 9.1.0
+    projects:
+      - repo: openstack/puppet-vswitch
+        hash: 2835e9b8044405224776636215754e2fbcda9c9c
