--- a/deliverables/rocky/puppet-watcher.yaml
+++ b/deliverables/rocky/puppet-watcher.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: b05c3e2b4a3ec90e13aaa8e2044a7ec83486b736
         repo: openstack/puppet-watcher
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-watcher
+        hash: 72a12db1eb1c4053c3e9eea8470b440dee135feb
