--- a/deliverables/rocky/puppet-heat.yaml
+++ b/deliverables/rocky/puppet-heat.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 16d44bc37f9cf837a3f89d94d1699507263ef068
         repo: openstack/puppet-heat
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-heat
+        hash: 2f61c0f47a37bd759cc729936ef3a46c216f80a7
