--- a/deliverables/rocky/puppet-mistral.yaml
+++ b/deliverables/rocky/puppet-mistral.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: c5a510c992b0ed12959b68d4f494d0e45de906c5
         repo: openstack/puppet-mistral
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-mistral
+        hash: 3697b8e58366fc0bdfb95a2e03334f3de994dbc3
