--- a/deliverables/rocky/puppet-octavia.yaml
+++ b/deliverables/rocky/puppet-octavia.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 2b995012ab97bf02d6bf8a592bbe86624f2fc920
         repo: openstack/puppet-octavia
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-octavia
+        hash: 82819173b452ef5418cf6ddae9eec9d2304bf212
