--- a/deliverables/rocky/puppet-sahara.yaml
+++ b/deliverables/rocky/puppet-sahara.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 27ef1043893c75b96e1ee92e8aa37cc5c25ee39c
         repo: openstack/puppet-sahara
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-sahara
+        hash: ca7a75db86b47bf27c44e525f3adc176e6962f84
