--- a/deliverables/rocky/puppet-tacker.yaml
+++ b/deliverables/rocky/puppet-tacker.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: fdf61f1d04fb9c74715e5e53a3c087c2d8192638
         repo: openstack/puppet-tacker
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-tacker
+        hash: c9a47825ab013455fe6a1eca78a9d3b81bfe0496
