--- a/deliverables/rocky/puppet-zaqar.yaml
+++ b/deliverables/rocky/puppet-zaqar.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: 966c074a47f3d5c86a00a9b57dcc5b187901625b
         repo: openstack/puppet-zaqar
     version: 13.0.0
+  - version: 13.1.0
+    projects:
+      - repo: openstack/puppet-zaqar
+        hash: 6ab03751496af5f2ef44ef3cf2276877087d5664
