Neutron Rocky-2 deliverables
Change-Id: I321eb71dd1cc644192b96af4338b991753f3e77c

--- a/deliverables/rocky/networking-bagpipe.yaml
+++ b/deliverables/rocky/networking-bagpipe.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 58a38a2ada8e95c04742c7e81d0daf062b4e1a8d
         repo: openstack/networking-bagpipe
     version: 9.0.0.0b1
+  - projects:
+      - hash: d7be829539c8381d096261a7d5ab6c004d2605a8
+        repo: openstack/networking-bagpipe
+    version: 9.0.0.0b2
