--- a/deliverables/rocky/networking-bgpvpn.yaml
+++ b/deliverables/rocky/networking-bgpvpn.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 2475824fa10a9bfe939f35ac2a5dd2baf4902fd1
         repo: openstack/networking-bgpvpn
     version: 9.0.0.0b1
+  - projects:
+      - hash: 3b503219acc2a25177c35886bbea7899efe68a7c
+        repo: openstack/networking-bgpvpn
+    version: 9.0.0.0b2
