--- a/deliverables/rocky/networking-midonet.yaml
+++ b/deliverables/rocky/networking-midonet.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: da6db34f13f9e52c370ffe1d2195261c35188494
         repo: openstack/networking-midonet
     version: 7.0.0.0b1
+  - projects:
+      - hash: 93e43b0e6436851ac6d40c1deefd341107acb69f
+        repo: openstack/networking-midonet
+    version: 7.0.0.0b2
