--- a/deliverables/rocky/networking-odl.yaml
+++ b/deliverables/rocky/networking-odl.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: e7c44b687d719139a35f4e5d575eaeea8f42cb25
         repo: openstack/networking-odl
     version: 13.0.0.0b1
+  - projects:
+      - hash: 7c9bb26438975e499cfa42d9dcabd6db5f2f4fe3
+        repo: openstack/networking-odl
+    version: 13.0.0.0b2
