--- a/deliverables/rocky/networking-ovn.yaml
+++ b/deliverables/rocky/networking-ovn.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 974d0176dac4ac68edf9af848aadf04d86b2da65
         repo: openstack/networking-ovn
     version: 5.0.0.0b1
+  - projects:
+      - hash: ace4b4d0e96fe4ec9943d0bd8856926f6f143031
+        repo: openstack/networking-ovn
+    version: 5.0.0.0b2
