--- a/deliverables/rocky/neutron-dynamic-routing.yaml
+++ b/deliverables/rocky/neutron-dynamic-routing.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 04bcb0853c9cf1afd67705b63cbe6e36a2e300a4
         repo: openstack/neutron-dynamic-routing
     version: 13.0.0.0b1
+  - projects:
+      - hash: 26bfa08b23060800a5daf3ab9aa3b8f3019f7f0c
+        repo: openstack/neutron-dynamic-routing
+    version: 13.0.0.0b2
