--- a/deliverables/rocky/neutron-fwaas.yaml
+++ b/deliverables/rocky/neutron-fwaas.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: ce626773ab70528c8af47da153f767ce841baca5
         repo: openstack/neutron-fwaas
     version: 13.0.0.0b1
+  - projects:
+      - hash: 4b4db7e98c469bc513ed3d0f3dfd1c4c99271dc6
+        repo: openstack/neutron-fwaas
+    version: 13.0.0.0b2
