--- a/deliverables/rocky/neutron-vpnaas.yaml
+++ b/deliverables/rocky/neutron-vpnaas.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 1c91256cba5f35e68a88418cf609db88cad5edcd
         repo: openstack/neutron-vpnaas
     version: 13.0.0.0b1
+  - projects:
+      - hash: 68fd474f7392dcc9bf68be129c51b21e6d3977a6
+        repo: openstack/neutron-vpnaas
+    version: 13.0.0.0b2
