--- a/deliverables/rocky/networking-sfc.yaml
+++ b/deliverables/rocky/networking-sfc.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 433e26560669736efc73fbfcb99d4820da10a175
         repo: openstack/networking-sfc
     version: 7.0.0.0b1
+  - projects:
+      - hash: 379fcd5cfcb7a71e7dbbe969da0255bc3ff09a33
+        repo: openstack/networking-sfc
+    version: 7.0.0.0b2
