--- a/deliverables/rocky/monasca-common.yaml
+++ b/deliverables/rocky/monasca-common.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: d77bd7967d56586cfdb03b0dfa1a3cd9a0a7aeae
         repo: openstack/monasca-common
     version: 2.9.0
+  - projects:
+      - hash: f1f1ba90fd3e9bd2ea39c06a01673e1a2c8f281a
+        repo: openstack/monasca-common
+    version: 2.10.0
