--- a/deliverables/rocky/keystone.yaml
+++ b/deliverables/rocky/keystone.yaml
@@ -8,5 +8,9 @@ releases:
     projects:
       - repo: openstack/keystone
         hash: 395c7088c2d8f11d57ac27878d0f647c42b1a908
+  - version: 14.0.0.0b2
+    projects:
+      - repo: openstack/keystone
+        hash: 104717d45847b3afcbd9adb4bfb887f8a8fffe66
 repository-settings:
   openstack/keystone: {}
