--- a/deliverables/rocky/python-glanceclient.yaml
+++ b/deliverables/rocky/python-glanceclient.yaml
@@ -7,6 +7,10 @@ releases:
       - hash: 314a29f6a6e64f69fd07fd5a0fdcf7aeb5574c1b
         repo: openstack/python-glanceclient
     version: 2.11.0
+  - projects:
+      - hash: 1cf00a5cc9c095071d18137c44f2722d0e20d84e
+        repo: openstack/python-glanceclient
+    version: 2.11.1
 team: glance
 type: client-library
 repository-settings:
