--- a/deliverables/rocky/neutron-lbaas-dashboard.yaml
+++ b/deliverables/rocky/neutron-lbaas-dashboard.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: e6da9ade502458258c565e36813f7d099234eba2
         repo: openstack/neutron-lbaas-dashboard
     version: 5.0.0.0b1
+  - projects:
+      - hash: dde6dfb2eba8eb2f1d9cd61986032b512330b281
+        repo: openstack/neutron-lbaas-dashboard
+    version: 5.0.0.0b2
