--- a/deliverables/rocky/neutron-lbaas.yaml
+++ b/deliverables/rocky/neutron-lbaas.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 86548cc0c5e82a8c2de89418542a99060cde49e1
         repo: openstack/neutron-lbaas
     version: 13.0.0.0b1
+  - projects:
+      - hash: c3cb720a54a5aa0516427d49338b11f2af21e418
+        repo: openstack/neutron-lbaas
+    version: 13.0.0.0b2
