--- a/deliverables/rocky/qinling.yaml
+++ b/deliverables/rocky/qinling.yaml
@@ -10,3 +10,7 @@ releases:
     projects:
       - repo: openstack/qinling
         hash: 917132a19cd58b3151d6f30839eb327a26459117
+  - projects:
+      - hash: 2e9d09169f71c5c42bdc2a6cb78cf82cbb29da3c
+        repo: openstack/qinling
+    version: 1.0.0.0b2
