Storlets Rocky-2 milestone release
Change-Id: Ibd390fb243bf95fb11fafbcdd56e6a2546d6776a

--- a/deliverables/rocky/storlets.yaml
+++ b/deliverables/rocky/storlets.yaml
@@ -8,5 +8,9 @@ releases:
     projects:
       - repo: openstack/storlets
         hash: a8b61f9961417ab4e8386550afd9fed836b1c376
+  - version: 2.0.0.0b2
+    projects:
+      - repo: openstack/storlets
+        hash: 2ce87cf277f0927713ceff9781d5c96ffb960240
 repository-settings:
   openstack/storlets: {}
