--- a/deliverables/rocky/python-vitrageclient.yaml
+++ b/deliverables/rocky/python-vitrageclient.yaml
@@ -6,3 +6,8 @@ team: vitrage
 type: client-library
 repository-settings:
   openstack/python-vitrageclient: {}
+releases:
+  - version: 2.2.0
+    projects:
+      - repo: openstack/python-vitrageclient
+        hash: 119addb8bfb532db63efd7e260bacddc6748a0bd
