--- a/deliverables/rocky/barbican.yaml
+++ b/deliverables/rocky/barbican.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: e708ff34137f2f4213ed964ec66aeadc03a17473
         repo: openstack/barbican
     version: 7.0.0.0b1
+  - projects:
+      - hash: 4c057e35eb6ac854ee9682b6fe281179b40c0920
+        repo: openstack/barbican
+    version: 7.0.0.0b2
