Masakari Rocky-2 milestone release
Change-Id: I9a3de312b95b95dd7d7da201ba4f9fea5cf8ccaf
Signed-off-by: Sampath Priyankara <sam47priya@gmail.com>

--- a/deliverables/rocky/masakari.yaml
+++ b/deliverables/rocky/masakari.yaml
@@ -10,3 +10,7 @@ releases:
     projects:
       - repo: openstack/masakari
         hash: 78c6705c2c1880cd7d7be31c9b2c58f67f15da8e
+  - version: 6.0.0.0b2
+    projects:
+      - repo: openstack/masakari
+        hash: ddb0249b23f82bb42a50527fae40ef867b4d67b8
