--- a/deliverables/rocky/masakari-monitors.yaml
+++ b/deliverables/rocky/masakari-monitors.yaml
@@ -10,3 +10,7 @@ releases:
     projects:
       - repo: openstack/masakari-monitors
         hash: 34d185deeee6118b373715c2567324010465a94b
+  - version: 6.0.0.0b2
+    projects:
+      - repo: openstack/masakari-monitors
+        hash: 26d558333d9731ca06da09b26fe6592c49c0ac8a
