PowerVMStackers Rocky-2 releases
Tag Rocky-2 for nova-powervm, networking-powervm, and
ceilometer-powervm.

Change-Id: I4caeb868f051d2e95fc0c93433de0545825070b4

--- a/deliverables/rocky/ceilometer-powervm.yaml
+++ b/deliverables/rocky/ceilometer-powervm.yaml
@@ -8,5 +8,9 @@ releases:
     projects:
       - repo: openstack/ceilometer-powervm
         hash: 7ccc8a83e3d5984bca986e29db91e494c2eeb8ad
+  - version: 7.0.0.0b2
+    projects:
+      - repo: openstack/ceilometer-powervm
+        hash: f89854d2f2244f596df6d37436244c62b1cbd929
 repository-settings:
   openstack/ceilometer-powervm: {}
