--- a/deliverables/rocky/networking-powervm.yaml
+++ b/deliverables/rocky/networking-powervm.yaml
@@ -8,5 +8,9 @@ releases:
     projects:
       - repo: openstack/networking-powervm
         hash: 3abfbee0a3cb463d3533047df561c6f13580affe
+  - version: 7.0.0.0b2
+    projects:
+      - repo: openstack/networking-powervm
+        hash: cdd75f18d6357e24160829cd2d1d166d4168f763
 repository-settings:
   openstack/networking-powervm: {}
