--- a/deliverables/rocky/release-test.yaml
+++ b/deliverables/rocky/release-test.yaml
@@ -22,3 +22,8 @@ releases:
         repo: openstack/release-test
         tarball-base: openstack-release-test
     version: 0.14.1
+  - projects:
+      - hash: 59b47a6d8e73f9bb11c666492b73bf07bfd124a5
+        repo: openstack/release-test
+        tarball-base: openstack-release-test
+    version: 0.15.0
