--- a/deliverables/rocky/heat.yaml
+++ b/deliverables/rocky/heat.yaml
@@ -8,5 +8,9 @@ releases:
     projects:
       - repo: openstack/heat
         hash: dd93b2318c029133705e5a9788cebc97d766dcd1
+  - projects:
+      - hash: 8f14f694f7917881dee60f4666494c14b5555c49
+        repo: openstack/heat
+    version: 11.0.0.0b2
 repository-settings:
   openstack/heat: {}
