--- a/deliverables/rocky/heat-dashboard.yaml
+++ b/deliverables/rocky/heat-dashboard.yaml
@@ -8,5 +8,9 @@ releases:
     projects:
       - repo: openstack/heat-dashboard
         hash: c88445abb191118e6e8cd35ed169f547b08e8118
+  - version: 1.2.0
+    projects:
+      - repo: openstack/heat-dashboard
+        hash: 71f627702a769b947e881984e255a030595601df
 repository-settings:
   openstack/heat-dashboard: {}
