--- a/deliverables/rocky/openstack-ansible.yaml
+++ b/deliverables/rocky/openstack-ansible.yaml
@@ -131,3 +131,7 @@ releases:
         hash: b976e44d883e65009255a2d653f69495f9f10c0e
       - repo: openstack/openstack-ansible-rsyslog_server
         hash: 958937cfe9f8864582b3ea2ac8eac026142c54e5
+  - projects:
+      - hash: 38b333ba306cd86f24a7c72ab466da3d389156d4
+        repo: openstack/openstack-ansible
+    version: 18.0.0.0b2
