--- a/deliverables/rocky/designate.yaml
+++ b/deliverables/rocky/designate.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: af6a4cf3a8060732df5f4e06c3b7434c7ea542c9
         repo: openstack/designate
     version: 7.0.0.0b1
+  - projects:
+      - hash: a62fbca5947bc8d71821218d21b9c503557c2d5e
+        repo: openstack/designate
+    version: 7.0.0.0b2
