--- a/deliverables/rocky/designate-dashboard.yaml
+++ b/deliverables/rocky/designate-dashboard.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 9d1c5d7e089383910d1a4374bf22cc89bb991b4d
         repo: openstack/designate-dashboard
     version: 7.0.0.0b1
+  - projects:
+      - hash: e8fb9f75fb2e73873db9d0ad9757460c2e7a7917
+        repo: openstack/designate-dashboard
+    version: 7.0.0.0b2
