--- a/deliverables/rocky/horizon.yaml
+++ b/deliverables/rocky/horizon.yaml
@@ -8,5 +8,9 @@ releases:
     projects:
       - hash: 0e0db289694fe4c1f0d490e4e6ebf2b8275b4657
         repo: openstack/horizon
+  - version: 14.0.0.0b2
+    projects:
+      - hash: b118c2f043b8d6567a9d02170b202be13a3792ea
+        repo: openstack/horizon
 repository-settings:
   openstack/horizon: {}
