--- a/deliverables/rocky/glance.yaml
+++ b/deliverables/rocky/glance.yaml
@@ -14,5 +14,9 @@ releases:
     projects:
       - repo: openstack/glance
         hash: c6376ea0b3f0d539874841c337a0a6bad4a68d27
+  - version: 17.0.0.0b2
+    projects:
+      - repo: openstack/glance
+        hash: 7d3ae1e9a67957489eb73585e0fc04233e60e65f
 repository-settings:
   openstack/glance: {}
