--- a/deliverables/rocky/manila.yaml
+++ b/deliverables/rocky/manila.yaml
@@ -8,5 +8,9 @@ releases:
     projects:
       - repo: openstack/manila
         hash: f1b20cd4a98891d5d63053e9e598232eb3160879
+  - projects:
+      - hash: 4c943fbcb25f4d4f8e2e9d8b77f0e389bed13c8b
+        repo: openstack/manila
+    version: 7.0.0.0b2
 repository-settings:
   openstack/manila: {}
