--- a/deliverables/rocky/python-manilaclient.yaml
+++ b/deliverables/rocky/python-manilaclient.yaml
@@ -9,5 +9,9 @@ releases:
     projects:
       - hash: a0a833fb56aac00dd322f1113adc728424c8ed43
         repo: openstack/python-manilaclient
+  - projects:
+      - hash: b0b08cc65007180a750fe1bc38e1bc26d4e899f9
+        repo: openstack/python-manilaclient
+    version: 1.23.0
 repository-settings:
   openstack/python-manilaclient: {}
