rocky: release python-novaclient 10.3.0
Change-Id: I8a62d7c367726eb7e55e0bc4032bed8769116243

--- a/deliverables/rocky/python-novaclient.yaml
+++ b/deliverables/rocky/python-novaclient.yaml
@@ -11,3 +11,7 @@ releases:
     projects:
       - repo: openstack/python-novaclient
         hash: 6049be67c0f66bd2d15c7b52f77dd89ac4ec2e94
+  - projects:
+      - hash: 0cb0ffa32de475059003f7ee973925caf4bb14e8
+        repo: openstack/python-novaclient
+    version: 10.3.0
