rocky: release os-traits 0.7.0
This release supports new traits for compute capabilities.

Change-Id: I19779fbcc6a9b8ac79f3fcd13c5c5af5bcf1b166

--- a/deliverables/rocky/os-traits.yaml
+++ b/deliverables/rocky/os-traits.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/os-traits
         hash: 16e87f2ea00e7a9410884b4ab4c1e5df2e66a6d8
+  - projects:
+      - hash: 8888c528776f27c632d34bec52de09991385bb54
+        repo: openstack/os-traits
+    version: 0.7.0
