rocky: release osc-placement 1.2.0
This release adds support for:
  - deleting resource provider inventories
  - traits
  - resource class set

Change-Id: I6b655fd7a2df162fe40e03d2d2092e4ff4db0ed6

--- a/deliverables/rocky/osc-placement.yaml
+++ b/deliverables/rocky/osc-placement.yaml
@@ -11,3 +11,7 @@ releases:
     projects:
       - repo: openstack/osc-placement
         hash: 844414861a90e251cc4f61ee6908009130284353
+  - projects:
+      - hash: 06b5738a3acf1f4fad850c88abf3415457dc73ee
+        repo: openstack/osc-placement
+    version: 1.2.0
