--- a/deliverables/rocky/manila-ui.yaml
+++ b/deliverables/rocky/manila-ui.yaml
@@ -9,5 +9,9 @@ releases:
     projects:
       - repo: openstack/manila-ui
         hash: 2203bf41348e314b71abf5efdcd1374a329a17a4
+  - projects:
+      - hash: 0f2a2a20ed630bd934366a252c9f361452881485
+        repo: openstack/manila-ui
+    version: 2.15.0
 repository-settings:
   openstack/manila-ui: {}
