Request release of Sahara Rocky M2
Change-Id: Ib2d3b5b2a483378f8536539945a45a15489b1564

--- a/deliverables/rocky/sahara-dashboard.yaml
+++ b/deliverables/rocky/sahara-dashboard.yaml
@@ -8,5 +8,9 @@ releases:
     projects:
       - repo: openstack/sahara-dashboard
         hash: 2730fcb5dfc654982221df69b03df3a3e6f9a33b
+  - version: 9.0.0.0b2
+    projects:
+      - repo: openstack/sahara-dashboard
+        hash: 4d04f9c5f5cd9b0aa4d6915910f53a57b412bf11
 repository-settings:
   openstack/sahara-dashboard: {}
