--- a/deliverables/rocky/sahara-extra.yaml
+++ b/deliverables/rocky/sahara-extra.yaml
@@ -8,5 +8,9 @@ releases:
     projects:
       - repo: openstack/sahara-extra
         hash: 82fb1fd1f4bbd4db104ab7ba5260ee1ef06749b9
+  - version: 9.1.0
+    projects:
+      - repo: openstack/sahara-extra
+        hash: c118e53a8e85ca93f3aa5e8f268c934f325c679a
 repository-settings:
   openstack/sahara-extra: {}
