--- a/deliverables/rocky/sahara-image-elements.yaml
+++ b/deliverables/rocky/sahara-image-elements.yaml
@@ -9,5 +9,9 @@ releases:
     projects:
       - repo: openstack/sahara-image-elements
         hash: ba498abc7d5230e5b83db64e48535e55e101d0e3
+  - version: 9.0.0.0b2
+    projects:
+      - repo: openstack/sahara-image-elements
+        hash: 5d05a3db2f99ef70c32c0b53a29f62f5e38cebe5
 repository-settings:
   openstack/sahara-image-elements: {}
