--- a/deliverables/rocky/sahara.yaml
+++ b/deliverables/rocky/sahara.yaml
@@ -8,5 +8,9 @@ releases:
     projects:
       - repo: openstack/sahara
         hash: 5994c935b9519e1aa93d98a3cb176bdd950135ff
+  - version: 9.0.0.0b2
+    projects:
+      - repo: openstack/sahara
+        hash: ebda88534a8bc9b24ed88301c583cc585740d9f1
 repository-settings:
   openstack/sahara: {}
