rocky: release nova 18.0.0.0b2
This is the r-2 milestone release for nova.

Change-Id: Ie2ee9bfdce61b0216daffdd2668026e64a158f58

--- a/deliverables/rocky/nova.yaml
+++ b/deliverables/rocky/nova.yaml
@@ -11,3 +11,7 @@ releases:
     projects:
       - repo: openstack/nova
         hash: 8a407bd288bb3116e50ea3b29a125caa036204cb
+  - projects:
+      - hash: f9a419e40ff6440d1b85ff175ab862090a970460
+        repo: openstack/nova
+    version: 18.0.0.0b2
