--- a/deliverables/rocky/python-mistralclient.yaml
+++ b/deliverables/rocky/python-mistralclient.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 8cc76487fd84bfaa3b4ff74248e2b138d21a504e
         repo: openstack/python-mistralclient
     version: 3.5.0
+  - projects:
+      - hash: 7451abb848f3f8b20c1f24575f427c4fbf5c0231
+        repo: openstack/python-mistralclient
+    version: 3.6.0
