--- a/deliverables/rocky/python-neutronclient.yaml
+++ b/deliverables/rocky/python-neutronclient.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: d8df387b9c058fd69f40f6bac50c81ee89abb707
         repo: openstack/python-neutronclient
     version: 6.8.0
+  - projects:
+      - hash: d090ea27510db3903e3256ca518b645987edfdc7
+        repo: openstack/python-neutronclient
+    version: 6.9.0
