--- a/deliverables/rocky/python-heatclient.yaml
+++ b/deliverables/rocky/python-heatclient.yaml
@@ -9,5 +9,9 @@ releases:
     projects:
       - repo: openstack/python-heatclient
         hash: aab5b85811c4a23dc0b66e27c771a59a91a2bec0
+  - version: 1.16.0
+    projects:
+      - repo: openstack/python-heatclient
+        hash: f095a0fd133a831ffeb04f9cb7f9d81a4f31a04a
 repository-settings:
   openstack/python-heatclient: {}
