--- a/deliverables/rocky/cinder.yaml
+++ b/deliverables/rocky/cinder.yaml
@@ -8,5 +8,10 @@ releases:
     projects:
       - hash: 8efee51cae17cec98abee3b3a896a626b5974e5b
         repo: openstack/cinder
+  - projects:
+      - hash: 875596b4ea74b998297b00a1891f5453d3b66c56
+        repo: openstack/cinder
+    version: 13.0.0.0b2
+
 repository-settings:
   openstack/cinder: {}
