--- a/deliverables/rocky/searchlight-ui.yaml
+++ b/deliverables/rocky/searchlight-ui.yaml
@@ -5,3 +5,8 @@ team: searchlight
 type: horizon-plugin
 repository-settings:
   openstack/searchlight-ui: {}
+releases:
+  - projects:
+      - hash: 5d9ff2addf52c6ae3a76d95d781c8cc3f8e73a6b
+        repo: openstack/searchlight-ui
+    version: 5.0.0.0b2
