--- a/deliverables/rocky/searchlight.yaml
+++ b/deliverables/rocky/searchlight.yaml
@@ -5,3 +5,8 @@ team: searchlight
 type: service
 repository-settings:
   openstack/searchlight: {}
+releases:
+  - projects:
+      - hash: 17275fe95d93a5bff996c58f8de045a87fc56be5
+        repo: openstack/searchlight
+    version: 5.0.0.0b2
