--- a/deliverables/rocky/neutron-lib.yaml
+++ b/deliverables/rocky/neutron-lib.yaml
@@ -13,5 +13,9 @@ releases:
     projects:
       - repo: openstack/neutron-lib
         hash: 55e0a3c7dda5c93368315d041fcc07f0f4887c12
+  - version: 1.16.0
+    projects:
+      - repo: openstack/neutron-lib
+        hash: d3365c6e8062bfa7b52e156cd46a633371b774f0
 repository-settings:
   openstack/neutron-lib: {}
