--- a/deliverables/rocky/searchlight-ui.yaml
+++ b/deliverables/rocky/searchlight-ui.yaml
@@ -10,3 +10,5 @@ releases:
       - hash: 5d9ff2addf52c6ae3a76d95d781c8cc3f8e73a6b
         repo: openstack/searchlight-ui
     version: 5.0.0.0b2
+    flags:
+      - forced
