Add cyborg and cyborgclient MS2 release for Rocky
Sorry for the late submission.

Patch 2 and 3: correct the client version as Doug suggested.

Change-Id: I48f5540878646158decaa77d908a41b069c8d0aa
Signed-off-by: zhipengh <huangzhipeng@huawei.com>

--- a/deliverables/rocky/cyborg.yaml
+++ b/deliverables/rocky/cyborg.yaml
@@ -9,5 +9,10 @@ releases:
       - hash: ce0b6e5a95e2d93265f814be445e21676479d1e0
         repo: openstack/cyborg
         tarball-base: openstack-cyborg
+  - version: 1.0.0.0b2
+    projects:
+      - hash: 10c394406f139a8f356abbe00f4dd89540727772
+        repo: openstack/cyborg
+        tarball-base: openstack-cyborg
 repository-settings:
   openstack/cyborg: {}
