--- a/deliverables/rocky/python-cyborgclient.yaml
+++ b/deliverables/rocky/python-cyborgclient.yaml
@@ -6,3 +6,8 @@ team: cyborg
 type: client-library
 repository-settings:
   openstack/python-cyborgclient: {}
+releases:
+  - version: 0.1.0
+    projects:
+      - repo: openstack/python-cyborgclient
+        hash: 516a37b52d5080c6d4093911ecd649128e973dd6
