--- a/deliverables/pike/openstack-ansible.yaml
+++ b/deliverables/pike/openstack-ansible.yaml
@@ -1564,6 +1564,10 @@ releases:
         hash: 693255ee40a2908707fcc962d620d68008647a57
       - repo: openstack/openstack-ansible-rsyslog_server
         hash: fa201bbadeb959f363ecba7046f052b2ee16e474
+  - projects:
+      - hash: fc2cb9eef48cc13924fdedd1f881bfd4fc6f5bfa
+        repo: openstack/openstack-ansible
+    version: 16.0.14
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
