--- a/deliverables/rocky/python-watcherclient.yaml
+++ b/deliverables/rocky/python-watcherclient.yaml
@@ -11,3 +11,7 @@ releases:
     projects:
       - repo: openstack/python-watcherclient
         hash: 673905feadaf43ba335d5d873d3f2599eb77de5a
+  - version: 2.0.0
+    projects:
+      - repo: openstack/python-watcherclient
+        hash: db012f1f8fe44ffc55e356645b57c2dd3c8cddbf
