--- a/deliverables/rocky/watcher.yaml
+++ b/deliverables/rocky/watcher.yaml
@@ -11,3 +11,8 @@ releases:
       - repo: openstack/watcher
         hash: 391bb92bd2c7bee2aae68d50fbbf0275c7093e34
         tarball-base: python-watcher
+  - version: 1.10.0
+    projects:
+      - repo: openstack/watcher
+        hash: 3591d9fa0a32f75f5043c6ed0971f5c03cb1f613
+        tarball-base: python-watcher
