--- a/deliverables/rocky/keystoneauth.yaml
+++ b/deliverables/rocky/keystoneauth.yaml
@@ -28,6 +28,11 @@ releases:
         repo: openstack/keystoneauth
         tarball-base: keystoneauth1
     version: 3.7.0
+  - projects:
+      - hash: 36ed4c11cb02042a0f5e58e39357ee621880ffc1
+        repo: openstack/keystoneauth
+        tarball-base: keystoneauth1
+    version: 3.8.0
 team: keystone
 type: library
 repository-settings:
