--- a/deliverables/rocky/os-brick.yaml
+++ b/deliverables/rocky/os-brick.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 6545454c7efa8df94900000ace4894eefb1e5488
         repo: openstack/os-brick
     version: 2.5.0
+  - projects:
+      - hash: 66362ae0f27769ecf272e421385c894de5166d7c
+        repo: openstack/os-brick
+    version: 2.5.1
