--- a/deliverables/rocky/release-test.yaml
+++ b/deliverables/rocky/release-test.yaml
@@ -27,3 +27,8 @@ releases:
         repo: openstack/release-test
         tarball-base: openstack-release-test
     version: 0.15.0
+  - projects:
+      - hash: a903b11f02b238d67b88c6cd7190e73da7a7e962
+        repo: openstack/release-test
+        tarball-base: openstack-release-test
+    version: 0.16.0
