--- a/deliverables/queens/ironic-inspector.yaml
+++ b/deliverables/queens/ironic-inspector.yaml
@@ -21,6 +21,10 @@ releases:
       - hash: a8d621f20a0dbc8db2acafd97c027d066b737b69
         repo: openstack/ironic-inspector
     version: 7.2.0
+  - projects:
+      - hash: 1eb1f6cc7cc5ae98a74304b40ffd8334d93210b6
+        repo: openstack/ironic-inspector
+    version: 7.2.1
 branches:
   - location: 7.1.0
     name: stable/queens
