--- a/deliverables/queens/ironic.yaml
+++ b/deliverables/queens/ironic.yaml
@@ -24,6 +24,10 @@ releases:
       - hash: 039e20d8751a81061dc64d4038d18face9fad5e4
         repo: openstack/ironic
     version: 10.1.2
+  - projects:
+      - hash: 816c2c04794296ded34ba231a12fba7b7ab5790a
+        repo: openstack/ironic
+    version: 10.1.3
 branches:
   - location: 10.1.0
     name: stable/queens
