--- a/deliverables/queens/python-ironicclient.yaml
+++ b/deliverables/queens/python-ironicclient.yaml
@@ -17,6 +17,10 @@ releases:
       - hash: 683b7c6e780f0cb4acaad34886d50e988bd3cd0c
         repo: openstack/python-ironicclient
     version: 2.2.0
+  - projects:
+      - hash: de77496644fd1f12d829717a51b0d565a4c82283
+        repo: openstack/python-ironicclient
+    version: 2.2.1
 branches:
   - name: stable/queens
     location: 2.2.0
